# deletescape

./: .gitignore  README.md  TODO.md  app_health.py  app_registry.py  audio.py  background_tasks.py  battery.py  boot.py  buttons.py  config.json  config.py  desktopshell.py  deviceconfig copy.json  deviceconfig.json  display.py  driver_config.py  dsui_qss_gen.py  file_handlers.py  fs_layout.py  genicon.ps1  get-icons.py  home.py  host_shell.py  init.sh  input_helper.py  kangel.py  location.py  logger.py  media.py  notifications.py  osconfig.json  osconfigold.json  photo_picker.py  sensors.py  shell2.py  simulate_slowness.py  taskbar.py  telephony.py  thermals.py  (+4 more)
.github/workflows/: build-generic.yml
apps/allapps/: main.py  manifest.json
apps/assistant/: card_renderer.py  main.py  (+3 more)
apps/weather/nws-ez/: README.md  pyproject.toml
apps/weather/nws-ez/nws_ez/: __init__.py  cache.py  client.py  errors.py  models.py
apps/weather/nws-ez/nws_ez.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
builder/: build_old.py  build_rootfs.py
defaults/: config.json
docs/: DEVICE_TEST_RESULTS.md  boot-cmdline.md  embed.md  issues.md
kernel/: README.md  endpoints.py  info.py  privserv.py
notes/: filestructure.md  modem.md  sandboxing.md  termux.md  windows.md
tests/: test_app_registry.py  test_config.py  test_driver_config.py  test_file_handlers.py  test_fs_layout.py
utils/: buildrun.py  check_bundle_ids.py  convert-oldtodo.py  find-nonsys-pkg.py  install_components.py  launchapp.py  os_builder.py  png2data.ps1  printloginkangel.py  rpi-codenames.csv  testprivserv.py
(+187 files in other folders)
